--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
         <!-- ASM for bytecode generation https://asm.ow2.io/ -->
         <dependency>
             <groupId>org.ow2.asm</groupId>
-            <artifactId>asm-all</artifactId>
-            <version>5.2</version>
+            <artifactId>asm</artifactId>
+            <version>7.0</version>
         </dependency>
     </dependencies>
     <build>
